DPC-678: Added public URL to configuration options
We can now configure the public facing url, which means we can override it with environment variables and properties.

This should avoid issues when trying to inject the value when no Http context is available.

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -1,48 +1,50 @@
 dpc.api {
-  include "server.conf"
-  include "queue.conf"
+    include "server.conf"
+    include "queue.conf"
 
-  authdb {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/dpc_auth"
-    user = postgres
-    password = dpc-safe
-    initialSize = 5
-    minSize = 5
-    maxSize = 10
-  }
+    publicURL = "http://localhost:3002" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
-  attributionURL = "http://localhost:3500/v1/"
-  exportPath = "/tmp"
-
-  httpClient {
-    timeout: 5s
-    connectionRequestTimeout: 5s
-  }
-
-  fhir {
-    validation {
-      enabled = true
-      schemaValidation = true
-      schematronValidation = true
-    }
-  }
-
-  swagger {
-    resourcePackage = gov.cms.dpc.api.resources
-    license = "license"
-    licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
-  }
-
-  tokens {
-    versionPolicy {
-      minimumVersion = 1
-      currentVersion = 1
+    authdb {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://localhost:5432/dpc_auth"
+        user = postgres
+        password = dpc-safe
+        initialSize = 5
+        minSize = 5
+        maxSize = 10
     }
 
-    expirationPolicy {
-      expirationOffset = 1
-      expirationUnit = "YEARS"
+    attributionURL = "http://localhost:3500/v1/"
+    exportPath = "/tmp"
+
+    httpClient {
+        timeout: 5s
+        connectionRequestTimeout: 5s
     }
-  }
+
+    fhir {
+        validation {
+            enabled = true
+            schemaValidation = true
+            schematronValidation = true
+        }
+    }
+
+    swagger {
+        resourcePackage = gov.cms.dpc.api.resources
+        license = "license"
+        licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
+    }
+
+    tokens {
+        versionPolicy {
+            minimumVersion = 1
+            currentVersion = 1
+        }
+
+        expirationPolicy {
+            expirationOffset = 1
+            expirationUnit = "YEARS"
+        }
+    }
 }
