--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,28 +1,30 @@
 dpc.api {
-  database = {
-    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-  }
+    publicURL = "https://dev.dpc.cms.gov:443/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
-  queuedb = {
-    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-    user = postgres
-    password = dpc-safe
-  }
+    database = {
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
+        user = postgres
+        password = dpc-safe
+    }
 
-  authdb = {
-    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
-    user = postgres
-    password = dpc-safe
-  }
+    queuedb = {
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
+        user = postgres
+        password = dpc-safe
+    }
 
-  server {
-    applicationContextPath = "/api"
-  }
+    authdb = {
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
+        user = postgres
+        password = dpc-safe
+    }
 
-  bbclient.keyStore.location = "/bb.keystore"
+    server {
+        applicationContextPath = "/api"
+    }
 
-  attributionURL = "http://backend.dpc-dev.local:8080/v1/"
-  exportPath = "/app/data"
+    bbclient.keyStore.location = "/bb.keystore"
+
+    attributionURL = "http://backend.dpc-dev.local:8080/v1/"
+    exportPath = "/app/data"
 }
