--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -1,29 +1,31 @@
 dpc.api {
 
-  server {
-    applicationContextPath = "/api"
-  }
+    publicURL = "http://dpc.cms.gov:443/v1" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
-  database {
-    url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-  }
-
-  authdb {
-    url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_auth"
-    user = postgres
-    password = dpc-safe
-  }
-
-  queuedb {
-      url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
-      user = postgres
-      password = dpc-safe
+    server {
+        applicationContextPath = "/api"
     }
 
-  bbclient.keyStore.location = "/bb.keystore"
+    database {
+        url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
+        user = postgres
+        password = dpc-safe
+    }
 
-  attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
-  exportPath = "/app/data"
+    authdb {
+        url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_auth"
+        user = postgres
+        password = dpc-safe
+    }
+
+    queuedb {
+        url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
+        user = postgres
+        password = dpc-safe
+    }
+
+    bbclient.keyStore.location = "/bb.keystore"
+
+    attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
+    exportPath = "/app/data"
 }
