--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -1,30 +1,32 @@
 dpc.api {
 
-  server {
-    applicationContextPath = "/api"
-  }
+    publicURL = "http://test.dpc.cms.gov:443/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
-  database {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-  }
+    server {
+        applicationContextPath = "/api"
+    }
 
-  queuedb {
-    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_queue"
-    user = postgres
-    password = dpc-safe
-  }
+    database {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_attribution"
+        user = postgres
+        password = dpc-safe
+    }
 
-  authdb {
-    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_auth"
-    user = postgres
-    password = dpc-safe
-  }
+    queuedb {
+        url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_queue"
+        user = postgres
+        password = dpc-safe
+    }
 
-  bbclient.keyStore.location = "/bb.keystore"
+    authdb {
+        url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_auth"
+        user = postgres
+        password = dpc-safe
+    }
 
-  attributionURL = "http://backend.dpc-test.local:8080/v1/"
-  exportPath = "/app/data"
+    bbclient.keyStore.location = "/bb.keystore"
+
+    attributionURL = "http://backend.dpc-test.local:8080/v1/"
+    exportPath = "/app/data"
 }
