--- a/dpc-api/src/main/resources/local.application.conf
+++ b/dpc-api/src/main/resources/local.application.conf
@@ -1,32 +1,33 @@
 dpc.api {
-  queue {
-    singleServerConfig {
-      address = "redis://redis:6379"
+    publicURL = "http://localhost:3002" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
+    queue {
+        singleServerConfig {
+            address = "redis://redis:6379"
+        }
     }
-  }
 
-  database = {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-  }
+    database = {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db:5432/dpc_attribution"
+        user = postgres
+        password = dpc-safe
+    }
 
-  queuedb = {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db:5432/dpc_queue"
-    user = postgres
-    password = dpc-safe
-  }
+    queuedb = {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db:5432/dpc_queue"
+        user = postgres
+        password = dpc-safe
+    }
 
-  authdb = {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db:5432/dpc_auth"
-    user = postgres
-    password = dpc-safe
-  }
+    authdb = {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db:5432/dpc_auth"
+        user = postgres
+        password = dpc-safe
+    }
 
-  attributionURL = "http://attribution:8080/v1/"
-  exportPath = /app/data
-  authenticationDisabled = true
+    attributionURL = "http://attribution:8080/v1/"
+    exportPath = /app/data
+    authenticationDisabled = true
 }
