--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>dpc-aggregation</module>
         <module>dpc-attribution</module>
         <module>dpc-common</module>
+        <module>dpc-consent</module>
         <module>dpc-bluebutton</module>
         <module>dpc-macaroons</module>
         <module>dpc-smoketest</module>
