--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -17,7 +17,7 @@
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-testing</artifactId>
             <version>0.4.0-SNAPSHOT</version>
-            <scope>testing</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
