--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -241,6 +241,11 @@
                         <artifactId>jooq-meta-extensions</artifactId>
                         <version>${jooq.version}</version>
                     </dependency>
+                    <dependency>
+                        <groupId>javax.persistence</groupId>
+                        <artifactId>javax.persistence-api</artifactId>
+                        <version>2.2</version>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
