Add internal feature to download CSV of all users
* Make this a separate controller action because we don't want to
  apply search/filters that might be set in the index action (request
  from Amy)
* Introduce Fake FS gem to mock the file system in tests so we're not
  addign files to the test host when running

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -40,6 +40,7 @@ group :test do
   gem 'selenium-webdriver'
   gem 'climate_control'
   gem 'rails-controller-testing'
+  gem 'fakefs', require: 'fakefs/safe'
 end
 
 group :development do
