--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 dpc.consent {
+  include "server.conf"
+
   swagger {
     title = "DPC Consent Service"
     resourcePackage = gov.cms.dpc.consent.resources
