Prototype for catching all Dropwizard logs

--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -31,5 +31,9 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-logging</artifactId>
+        </dependency>
     </dependencies>
 </project>
