--- a/dpc-attribution/src/test/resources/local.application.conf
+++ b/dpc-attribution/src/test/resources/local.application.conf
@@ -1,18 +1,17 @@
-dpc.aggregation {
+dpc.attribution {
+  database = {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://db:5432/dpc_attribution"
+    user = postgres
+    password = dpc-safe
+  }
 
   server {
-    registerDefaultExceptionMappers = false
     applicationConnectors = [{
       type = http
       port = 8080
     }]
-    adminConnectors = [{
-      type = http
-      port = 9999
-    }]
   }
-
-  exportPath = "/tmp"
 
   logging {
    appenders {
