--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
             <dependency>
                 <groupId>${typesafe.config.groupID}</groupId>
                 <artifactId>typesafe-dropwizard-configuration</artifactId>
-                <version>environment-SNAPSHOT</version>
+                <version>8086f49d549342a5948840d5709b85b9d46d1555</version>
             </dependency>
             <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
             <dependency>
@@ -545,7 +545,6 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                     <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                 </configuration>
             </plugin>
