--- a/dpc-consent/pom.xml
+++ b/dpc-consent/pom.xml
@@ -14,7 +14,6 @@
 
     <properties>
         <mainClass>gov.cms.dpc.consent.DPCConsentService</mainClass>
-        <jooq.version>3.11.10</jooq.version>
     </properties>
 
     <dependencies>
@@ -34,11 +33,6 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-hibernate</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.knowm</groupId>
-            <artifactId>dropwizard-sundial</artifactId>
-            <version>1.3.1</version>
         </dependency>
         <!--No longer shipped with Java 11, so we need to include it manually-->
         <dependency>
@@ -183,6 +177,29 @@
                             </permission>
                         </permissions>
                     </extraDirectories>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>5.4.2.Final</version>
+                        </annotationProcessorPath>
+                        <path>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.3.0</version>
+                        </path>
+                        <path>
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                            <version>1.3.1</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
