--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_MULTIPLE_DATABASES=dpc_attribution,dpc_queue,dpc_auth
+      - POSTGRES_MULTIPLE_DATABASES=dpc_attribution,dpc_queue,dpc_auth,dpc_consent
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=dpc-safe
     ports:
@@ -53,6 +53,14 @@ services:
     volumes:
       - export-volume:/app/data
       - ./jacocoReport/dpc-api:/jacoco-report
+
+  consent:
+    image: ${ECR_HOST:-755619740999.dkr.ecr.us-east-1.amazonaws.com/dpc-consent}:latest
+    environment:
+      - ENV=local
+      - JACOCO=${REPORT_COVERAGE}
+    volumes:
+      - ./jacocoReport/dpc-consent:/jacoco-report
 
   start_core_dependencies:
     image: dadarek/wait-for-dependencies
