DPC-726: Basic $submit endpoint is working.
The submit endpoint seems to be working correctly, but there's no authentication at all.

Did a bit of refactoring of the Organization creation code.

--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -31,5 +31,13 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-structures-dstu3</artifactId>
+        </dependency>
     </dependencies>
 </project>
