Remove default HTTPS port from public export paths.
Per a discussion with pilot users, including the default HTTPS port in our file output response seems to be causing some issues. I'm assuming it has to do with corporate proxies, but since we're just being explicit about the default port, it seems fine to remove it. This was confirmed to solve the issue at the pilot site.

--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,5 +1,5 @@
 dpc.api {
-    publicURL = "https://dev.dpc.cms.gov:443/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
+    publicURL = "https://dev.dpc.cms.gov/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
     database = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
