--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -108,6 +108,7 @@
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <testResources>
