DPC-711: Add title and description to API service.
Added a title and simple description to the API service docs.

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -32,8 +32,11 @@ dpc.api {
 
     swagger {
         resourcePackage = gov.cms.dpc.api.resources
-        license = "license"
+        license = "Public Domain"
         licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
+        title = "Data at the Point of Care"
+        description = """As patients move throughout the healthcare system, providers often struggle to gain and maintain a complete picture of their medical history.
+        Data at the Point of Care fills in the gaps with claims data to inform providers with secure, structured patient history, past procedures, medication adherence, and more."""
     }
 
     tokens {
