--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -1,6 +1,6 @@
 dpc.api {
 
-    publicURL = "http://dpc.cms.gov/v1" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
+    publicURL = "https://dpc.cms.gov/v1" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
     server {
         applicationContextPath = "/api"
