--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -1,6 +1,6 @@
 dpc.api {
 
-    publicURL = "http://test.dpc.cms.gov/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
+    publicURL = "https://test.dpc.cms.gov/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
     server {
         applicationContextPath = "/api"
