--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,3 +1,3 @@
 host=https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
-admin-url=http://dev.dpc.cms.gov:9900/tasks
+admin-url=http://dpc-dev-815423886.us-east-1.elb.amazonaws.com:9900/tasks
 attribution-url=http://internal-dpc-dev-backend-681022362.us-east-1.elb.amazonaws.com:8080/v1
