--- a/src/main/resources/prod-sbx.properties
+++ b/src/main/resources/prod-sbx.properties
@@ -1,3 +1,3 @@
 host=https://dpc.cms.gov/api/v1
 admin-url=http://dpc.cms.gov:9900/tasks
-attribution-url=http://internal-dpc-prod-sbx-backend-555206083.us-east-1.elb.amazonaws.com:8080/v1
+attribution-url=http://localhost:3500/v1
