DPC-548: Add build version to application.
Updated our Properties Provider to output the application build version.

This is the first 7 characters of the git sha, followed by the build timestamp.

Both the Attribution service and the API service return this value correctly.

--- a/pom.xml
+++ b/pom.xml
@@ -537,6 +537,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>git-commit</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <configuration>
+                            <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
