Consent table migration, job fixes, tests

--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -1,8 +1,9 @@
 dpc.consent {
   include "server.conf"
 
-  swagger {
-    title = "DPC Consent Service"
-    resourcePackage = gov.cms.dpc.consent.resources
+  sundial {
+    annotated-jobs-package-name = gov.cms.dpc.consent.jobs
   }
+
+  suppressionFileDir = "/dpc/in/1800"
 }
