--- a/dpc-consent/pom.xml
+++ b/dpc-consent/pom.xml
@@ -87,6 +87,17 @@
             <artifactId>hapi-fhir-client</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-testing</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
