DPC-605: Moved BakeryKeyPair class into dpc-macaroons module
Refactored the keypair classes and updated all the signatures to take BakeryKeyPair values, rather than Curve25519 pairs directly.

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -50,4 +50,6 @@ dpc.api {
             expirationUnit = "YEARS"
         }
     }
+
+    keyPairLocation = "src/main/resources/bakery_keypair.json"
 }
