DPC-605: Fix default keypair location
Is now relative when running local tests, and absolute for all the Docker deployments.

Follows the patterns establishing in the BBClient keyStore settings.

--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -27,4 +27,5 @@ dpc.api {
 
     attributionURL = "http://backend.dpc-dev.local:8080/v1/"
     exportPath = "/app/data"
+    keyPairLocation = "/bakery_keypair.json"
 }
