--- a/dpc-api/src/main/resources/local.application.conf
+++ b/dpc-api/src/main/resources/local.application.conf
@@ -30,4 +30,5 @@ dpc.api {
     attributionURL = "http://attribution:8080/v1/"
     exportPath = /app/data
     authenticationDisabled = true
+    keyPairLocation = "/bakery_keypair.json"
 }
