--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -28,4 +28,5 @@ dpc.api {
 
     attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
     exportPath = "/app/data"
+    keyPairLocation = "/bakery_keypair.json"
 }
