--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -29,4 +29,5 @@ dpc.api {
 
     attributionURL = "http://backend.dpc-test.local:8080/v1/"
     exportPath = "/app/data"
+    keyPairLocation = "/bakery_keypair.json"
 }
