--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -47,5 +47,11 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.knowm</groupId>
+            <artifactId>sundial</artifactId>
+            <version>2.1.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
