consent api and seed data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,9 +57,14 @@ services:
 
   consent:
     image: ${ECR_HOST:-755619740999.dkr.ecr.us-east-1.amazonaws.com/dpc-consent}:latest
+    depends_on:
+      - db
     environment:
       - ENV=local
       - JACOCO=${REPORT_COVERAGE}
+    ports:
+      - "3333:3002"
+      - "9999:9900"
     volumes:
       - ./jacocoReport/dpc-consent:/jacoco-report
 
