DPC-605: Persist ECC keys between application restarts. (#333)
* DPC-605: Added admin task for generating Bakery Keypairs

We can now generate a keypair using an admin task. Which can then be persisted for future use.

* DPC-605: Moved BakeryKeyPair class into dpc-macaroons module

Refactored the keypair classes and updated all the signatures to take BakeryKeyPair values, rather than Curve25519 pairs directly.

* DPC-605: Added keypair to Docker containers

Add the keypair into the build process for the Docker containers.

Also cleaned up some ErrorProne warnings.

* DPC-605: Fix default keypair location

Is now relative when running local tests, and absolute for all the Docker deployments.

Follows the patterns establishing in the BBClient keyStore settings.

* DPC-605: Added S3 bootstrapping to Docker entrypoint

Moved logging statement in KeyPair task to allow outputting the user ID creating the key.

* DPC-605: Add environment checking to keypairs

Added an `environment` field to the keypair files. During application startup, we now check to see if the keypair matches the environment. If not, we reject it.

This way we can't accidentally use our public testing keypair for any of our real environments.

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -50,4 +50,6 @@ dpc.api {
             expirationUnit = "YEARS"
         }
     }
+
+    keyPairLocation = "../src/main/resources/keypair/bakery_keypair.json"
 }
