--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -49,8 +49,7 @@
         </dependency>
         <dependency>
             <groupId>org.knowm</groupId>
-            <artifactId>sundial</artifactId>
-            <version>2.1.3</version>
+            <artifactId>dropwizard-sundial</artifactId>
             <scope>compile</scope>
         </dependency>
     </dependencies>
