--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
                 <artifactId>dropwizard-swagger</artifactId>
                 <version>1.3.12-1</version>
             </dependency>
+            <dependency>
+                <groupId>org.knowm</groupId>
+                <artifactId>dropwizard-sundial</artifactId>
+                <version>1.3.1</version>
+            </dependency>
             <!--Test dependencies-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
