--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   base:
-    image: ${ECR_HOST:-755619740999.dkr.ecr.us-east-1.amazonaws.com/dpc-base}:latest
+    image: dpc-base:latest
     build:
       context: .
       dockerfile: docker/Dockerfiles/Dockerfile.base
