Serial ID for InvalidSuppressionRecordException; more consent db changes

--- a/dpc-consent/src/main/resources/prod-sbx.application.conf
+++ b/dpc-consent/src/main/resources/prod-sbx.application.conf
@@ -1,5 +1,5 @@
 dpc.consent {
-  database {
+  consentdb {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_consent"
     user = postgres
