--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -20,6 +20,16 @@ queuedb {
   maxSize = 10
 }
 
+consentdb {
+  driverClass = org.postgresql.Driver
+  url = "jdbc:postgresql://localhost:5432/dpc_consent"
+  user = postgres
+  password = dpc-safe
+  initialSize = 5
+  minSize = 5
+  maxSize = 10
+}
+
 server {
   registerDefaultExceptionMappers = false
   applicationConnectors = [{
