--- a/dpc-consent/src/main/resources/dev.application.conf
+++ b/dpc-consent/src/main/resources/dev.application.conf
@@ -1,5 +1,5 @@
 dpc.consent {
-  database {
+  consentdb {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_consent"
     user = postgres
