--- a/pom.xml
+++ b/pom.xml
@@ -400,7 +400,7 @@
                             </tags>
                         </to>
                         <from>
-                            <image>openjdk:11-jdk-slim</image>
+                            <image>docker://dpc-base:latest</image>
                         </from>
                     </configuration>
                     <executions>
