Remove time constraint for smoke test failure reporting

--- a/src/test/smoke_test.yml
+++ b/src/test/smoke_test.yml
@@ -16,4 +16,4 @@ scenarios:
 reporting:
   - module: passfail
     criteria:
-      - "fail>50% for 10s, stop as failed"
+      - "fail>50%, stop as failed"
