DPC-712: When I create an organization in the web app, create it in the API. (#322)
* Add api_environments to organizations

Update organizations UI to support api_environments

* Filter input for api_environments to make sure all incoming values
  are arrays without blank items
* Add feature specs

* Improve org api_environments styling

* Set up and stub API calls until API connection is ready

* fixup! Set up and stub API calls until API connection is ready

* Add required tables and fields for API

* Set up FHIR Endpoint as own table and model to encapsulate logic
  and make it easier to make this a One to Many relationship with
  Organization late (one org, many endpoints), but keep it as One to One
  for now for ease of view/controller code.
* Use enums for fields with set options

* Refactor FhirEndpoint to ProfileEndpoint

* It may not be FHIR; "Profile" is more generic
* Allow organization not to have a profile_endpoint; this isn't necessary
  for sandbox env
* Add tests

* style new orgs form

* WIP Add API call for orgs

* Flesh out API org creation tests

* Save one RegisteredOrganization per API env

* Use raw html for checkboxes instead of Rails form helpers because
  Rails was being annoying about the array virtual attribute for
  api_environments
* Initiate API calls from virtual attribute in Organization model for
  seamless flow from UIs or Rails console input
* Save one RegisteredOrganization record per API environment that the
  organization has enabled, because we need to store that record's ID
  that gets returned from the API call, and the ID may not be the same
  in each env.

* WIP Organization $submit API call

* All tests green for organization registation

* Delay organization registration in background
* Do not save organization in OrganizationRegistrar because it kicks off
  infinite loop
* Add NPI field to UI
* Add :perform_enqueued option for specs

* Remove FHIR client gem beca

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -62,3 +62,4 @@ gem 'omniauth-github'
 gem 'omniauth-rails_csrf_protection', '~> 0.1'
 gem 'octokit'
 gem 'kaminari'
+gem 'active_model_serializers'
