Getting MBI and beneficiary ID from BFD; tests and cleanup

--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -19,4 +19,21 @@ dpc.consent {
 
   // Disable FHIR validation
   fhir.validation.enabled = false
+
+  bbclient {
+    keyStore {
+      type = "JKS"
+      defaultPassword = "changeit"
+      location = "../bbcerts/bb.keystore"
+    }
+
+    timeouts {
+      connectionTimeout: 5000 // ms
+      socketTimeout: 5000 // ms
+      requestTimeout: 5000 // ms
+    }
+
+    serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+    count = 100 // Max number of resource that a request to BB will return before using another request
+  }
 }
