--- a/dpc-smoketest/pom.xml
+++ b/dpc-smoketest/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>dpc-smoketest</artifactId>
     <name>DPC SmokeTests</name>
 
+    <properties>
+        <jmeter.version>5.1.1</jmeter.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>gov.cms.dpc</groupId>
@@ -32,12 +36,12 @@
         <dependency>
             <groupId>org.apache.jmeter</groupId>
             <artifactId>ApacheJMeter_core</artifactId>
-            <version>5.1.1</version>
+            <version>${jmeter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jmeter</groupId>
             <artifactId>ApacheJMeter_java</artifactId>
-            <version>5.1.1</version>
+            <version>${jmeter.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
