--- a/src/test/local.smoke_test.yml
+++ b/src/test/local.smoke_test.yml
@@ -2,6 +2,7 @@ settings:
   env:
     HOST: http://localhost:3002/v1
     ADMIN_URL: http://localhost:9903/tasks
+    SEED_FILE: src/main/resources/test_associations.csv
   artifacts-dir: bzt-out/%Y-%m-%d_%H-%M-%S.%f
 
 included-configs:
