--- a/src/test/local.smoke_test.yml
+++ b/src/test/local.smoke_test.yml
@@ -3,6 +3,8 @@ settings:
     HOST: http://localhost:3002/v1
     ADMIN_URL: http://localhost:9903/tasks
     SEED_FILE: src/main/resources/test_associations.csv
+    PROVIDER_BUNDLE: provider_bundle.json
+    PATIENT_BUNDLE: patient_bundle.json
   artifacts-dir: bzt-out/%Y-%m-%d_%H-%M-%S.%f
 
 included-configs:
