--- a/src/test/dev.smoke_test.yml
+++ b/src/test/dev.smoke_test.yml
@@ -3,7 +3,7 @@ settings:
     HOST: https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
     ADMIN_URL: http://dpc-dev-815423886.us-east-1.elb.amazonaws.com:9900/tasks
     SEED_FILE: src/main/resources/test_associations-dpr.csv
-    PROVIDER_BUNDLE: provider_bundle-dpr.json
+    PROVIDER_BUNDLE: provider_bundle.json
     PATIENT_BUNDLE: patient_bundle-dpr.json
 
 included-configs:
