--- a/src/test/test.smoke_test.yml
+++ b/src/test/test.smoke_test.yml
@@ -3,7 +3,7 @@ settings:
     HOST: https://test.dpc.cms.gov/api/v1
     ADMIN_URL: http://test.dpc.cms.gov:9900/tasks
     SEED_FILE: src/main/resources/test_associations-dpr.csv
-    PROVIDER_BUNDLE: provider_bundle-dpr.json
+    PROVIDER_BUNDLE: provider_bundle.json
     PATIENT_BUNDLE: patient_bundle-dpr.json
   artifacts-dir: bzt-out/%Y-%m-%d_%H-%M-%S.%f
 
