DPC-756: Update smoke tests to support DPR data (#377)
* More progress on getting the smoke tests to pass.

We're up to monitoring the export response.

* Remove test changes and old demo command.

* Add random int to public key label.

Hack until DPC-784 is merged.

* Fix task url

Added an additional method for passing the admin URL to the createGoldenMacaroonMethod.
Used by the smoke tests as a runtime option.

* Code climate cleanups

Also updated the smoke make target to only build the smoke tests.

* Test data for DPR environment

* Parameterize test associations seed file

* Add documentation of new DPR files to readme

* Parameterize the patient and provider bundles for the smoke test

* Add parameters to the smoke test for the patient and provider bundles

* Fix parameters for smoke test

* Remove stray line of code from merge

* Adds additional clarity to data readme file

--- a/src/test/dev.smoke_test.yml
+++ b/src/test/dev.smoke_test.yml
@@ -2,6 +2,9 @@ settings:
   env:
     HOST: https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
     ADMIN_URL: http://dpc-dev-815423886.us-east-1.elb.amazonaws.com:9900/tasks
+    SEED_FILE: src/main/resources/test_associations-dpr.csv
+    PROVIDER_BUNDLE: provider_bundle.json
+    PATIENT_BUNDLE: patient_bundle-dpr.json
 
 included-configs:
   - smoke_test.yml
