--- a/src/test/smoke_test.yml
+++ b/src/test/smoke_test.yml
@@ -11,6 +11,9 @@ scenarios:
     properties:
       host: ${HOST}
       admin-url: ${ADMIN_URL}
+      seed-file: ${SEED_FILE}
+      provider-bundle: ${PROVIDER_BUNDLE}
+      patient-bundle: ${PATIENT_BUNDLE}
     script: src/main/resources/SmokeTest.jmx
 
 reporting:
