--- a/src/test/dev.smoke_test.yml
+++ b/src/test/dev.smoke_test.yml
@@ -1,7 +1,7 @@
 settings:
   env:
     HOST: https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
-    ADMIN_URL: http://dpc-dev-815423886.us-east-1.elb.amazonaws.com:9900/tasks
+    ADMIN_URL: http://internal-dpc-dev-frontend-internal-1469809887.us-east-1.elb.amazonaws.com:9900/tasks
     SEED_FILE: src/main/resources/test_associations-dpr.csv
     PROVIDER_BUNDLE: provider_bundle.json
     PATIENT_BUNDLE: patient_bundle-dpr.json
