Fixes a number of issues related to failing smoketests
Disables strict SSL checking, so we can run our tests against the internal ALBs and in Dev, which doesn't have a DNS record yet.

Fixed bad serialization of Bakery Keypairs, they were double base64 encoded.

Likewise, fixed double encoding of V1 binary macaroons, which are automatically base64 encoded.

--- a/dpc-api/src/main/resources/local.application.conf
+++ b/dpc-api/src/main/resources/local.application.conf
@@ -29,6 +29,6 @@ dpc.api {
 
     attributionURL = "http://attribution:8080/v1/"
     exportPath = /app/data
-    authenticationDisabled = true
+    authenticationDisabled = false
     keyPairLocation = "/bakery_keypair.json"
 }
