--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - ENV=local
       - JACOCO=${REPORT_COVERAGE}
       - exportPath=/app/data
+      - JVM_FLAGS=-Ddpc.api.authenticationDisabled=${AUTH_DISABLED:-true}
     depends_on:
       - attribution
     volumes:
