more review comments addressed

--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -1,11 +1,21 @@
 dpc.consent {
   include "server.conf"
 
+  swagger {
+    title = "DPC Consent Service"
+    resourcePackage = gov.cms.dpc.consent.resources
+  }
+
   sundial {
     annotated-jobs-package-name = gov.cms.dpc.consent.jobs
   }
 
   suppressionFileDir = "/dpc/in/1800"
+
+  // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
+  fhirReferenceURL = "http://localhost:3200/api/v1"
+
+  consentOrganizationURL = "https://localhost"
 
   // Disable FHIR validation
   fhir.validation.enabled = false
