--- a/dpc-consent/src/main/resources/sbx.application.conf
+++ b/dpc-consent/src/main/resources/sbx.application.conf
@@ -5,4 +5,12 @@ dpc.consent {
     user = postgres
     password = postgres
   }
+
+  // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
+  fhirReferenceURL = "https://dpc.cms.gov/v1"
+
+  consentOrganizationURL = "https://dpc.cms.gov"
+
+  // Disable FHIR validation
+  fhir.validation.enabled = false
 }
