--- a/dpc-consent/src/main/resources/dev.application.conf
+++ b/dpc-consent/src/main/resources/dev.application.conf
@@ -5,4 +5,12 @@ dpc.consent {
     user = postgres
     password = dpc-safe
   }
+
+  // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
+  fhirReferenceURL = "https://dev.dpc.cms.gov/api/v1"
+
+  consentOrganizationURL = "https://dev.dpc.cms.gov"
+
+  // Disable FHIR validation
+  fhir.validation.enabled = false
 }
