--- a/dpc-consent/src/main/resources/local.application.conf
+++ b/dpc-consent/src/main/resources/local.application.conf
@@ -5,4 +5,13 @@ dpc.consent {
     user = postgres
     password = dpc-safe
   }
+
+
+  // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
+  fhirReferenceURL = "http://localhost:3200/api/v1"
+
+  consentOrganizationURL = "https://localhost"
+
+  // Disable FHIR validation
+  fhir.validation.enabled = false
 }
