DPC-809: Update smoke tests to handle token expiration (#389)
* DPC-809: Updated the way we handle SMART authentication in our HTTP clients.

Created a new builder helper which we can use to enable trusting and authed HTTPClients.
These can now be wired through the application and avoid duplicating a bunch of code.
They also automatically refresh within 30 seconds of expiration.

* DPC-809: fix failing tests

Fix the URL paths in the application tests, now things are much cleaner.

* DPC-809: Final (?) set of Smoke Test Fixes

Moved smoke test host back to public ALB

Added default constructor to Job Completion Model

* DPC-809: Remove useless import

--- a/src/test/dev.smoke_test.yml
+++ b/src/test/dev.smoke_test.yml
@@ -1,6 +1,6 @@
 settings:
   env:
-    HOST: http://internal-dpc-dev-frontend-internal-1469809887.us-east-1.elb.amazonaws.com/api/v1
+    HOST: https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
     ADMIN_URL: **REMOVED**
     SEED_FILE: src/main/resources/test_associations.csv
     PROVIDER_BUNDLE: provider_bundle.json
