DPC-693: 1-800-MEDICARE ETL (#339)
* 1-800-MEDICARE file ETL setup

* Consent table migration, job fixes, tests

* More ETL testing and cleanup

* Synthetic data and test

* Shared startJob/stopJob in test utils

* Cleanup from Code Climate

* Un-break failure from Code Climate change

* Add .gitignore file so directory can be added to repo

* Error handling; moving ConsentEntity

* Hibernate classes for consent database

* Use managed session factory; compiled pattern for 1-800 filename

* Add Sundial dependency to parent POM

* Consent db

* Serial ID for InvalidSuppressionRecordException; more consent db changes

* Transaction try/catch; renaming

* Refactoring; file name and line number in exception; entity annotation change

* Rename migrations file

* Try with resources on buffered reader

* Clean up log message and add exception

* Re-add suppression file dir provider

* Disable SuppressionFileImport job trigger

--- a/dpc-consent/pom.xml
+++ b/dpc-consent/pom.xml
@@ -34,6 +34,10 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-hibernate</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.knowm</groupId>
+            <artifactId>dropwizard-sundial</artifactId>
+        </dependency>
         <!--No longer shipped with Java 11, so we need to include it manually-->
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -80,6 +84,17 @@
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-testing</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
