--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -44,6 +44,15 @@
             <artifactId>hapi-fhir-structures-dstu3</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.knowm</groupId>
+            <artifactId>dropwizard-sundial</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.github.nickrobison-usds</groupId>
             <artifactId>jmacaroons</artifactId>
             <version>1024efc25df40c63bbfbaedc6d75556d829d84c7</version>
