Resolve Swagger paths and issues.
Updated Swagger to use https as the scheme (except when running locally)

Added explicit paths to all of the V1 resources so that they get picked up correctly by Swagger.

Removed the example in the /metadata section, which was causing everything to slow down.

--- a/application.local.conf.sample
+++ b/application.local.conf.sample
@@ -13,6 +13,10 @@ dpc {
     }
     authenticationDisabled=true
     keyPairLocation = "src/main/resources/keypair/bakery_keypair.json"
+
+    swagger {
+            schemes = ["http"]
+        }
   }
 
   attribution {
