--- a/dpc-api/src/main/resources/local.application.conf
+++ b/dpc-api/src/main/resources/local.application.conf
@@ -31,4 +31,8 @@ dpc.api {
     exportPath = /app/data
     authenticationDisabled = true
     keyPairLocation = "/bakery_keypair.json"
+
+    swagger {
+        schemes = ["http"]
+    }
 }
