Rough command for importing organizations into the website

--- a/dpc-attribution/src/main/resources/local.application.conf
+++ b/dpc-attribution/src/main/resources/local.application.conf
@@ -6,6 +6,13 @@ dpc.attribution {
     password = dpc-safe
   }
 
+  database_website = {
+      driverClass = org.postgresql.Driver
+      url = "jdbc:postgresql://db:5432/website"
+      user = postgres
+      password = dpc-safe
+    }
+
   server {
     applicationConnectors = [{
       type = http
